--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,9 @@
 	
 	#logo{
 	width: 1377px;
-	height:100px;
-	position:relative;
-	width: 100&;
+    height:100px;
+    position:absolute;
+    top:0px;
+    left:0px;
 	}
 	
