--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,12 @@
 		}
 	body {
 	
-	background-image:url(../background.jpg);
-	width:500px;
-	height:500px;}
+	background:url(../background.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	}
 	
 	#anleitung{
 	
@@ -40,10 +43,12 @@
 	#impressum:hover {
 	opacity:1.0;}
 	
-	#IMG.logo{
-	 
-    display: block;
-    margin-left: auto;
-    margin-right: auto 
+	
+#logo{
+	
+	margin: auto;
+	text-align:center;
+	padding:auto;
+    
 	 }
 	
