--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,12 @@
 	width: 800px;
 	height: 600px;
 	
-	position:absolute;
-	top:150px;
-	left:270px;
+	margin: 100px auto;
 	border: solid 2px #000000;
 	
 		}
-	body {
+
+body {
 	
 	background:url(../background.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
@@ -17,37 +16,57 @@
 	background-size: cover;
 	}
 	
-	#anleitung{
+#anleitung{
 	
 	background-color: #ffffff;
 	opacity:0.2;
 	width: 250px;
 	height: 250px;
 	border: solid 2px #000000;
-	position:absolute;
-	top:310px;
-	left:5px;}
 	
-	#impressum{
+	float: left;
+
+
+	position: absolute;
+    top: 50%;
+    left: 0%;
+     
+     
+     
+     margin-left: 20px;
+     margin-top: -50px;
+}
+	
+#impressum{
 	background-color: #ffffff;
 	opacity:0.2;
 	width: 250px;
 	height: 250px;
 	border: solid 2px #000000;
-	position:absolute;
-	top:310px;
-	left:1085px;}
+	float:right;
 	
-	#anleitung:hover {
+	position: absolute;
+    top: 50%;
+    left: 100%;
+     
+     
+     
+     margin-left: -270px;
+     margin-top: -50px;
+	}
+	
+#anleitung:hover {
 	opacity:1.0;}
-	#impressum:hover {
+#impressum:hover {
 	opacity:1.0;}
 	
 	
 #logo{
+	width:1377px;
+	height: 100px;
 	
-	margin: auto;
-	text-align:center;
+	margin: 0px auto;
+	
 	padding:auto;
     
 	 }
